--- a/sk/browser/updater/updater.ini
+++ b/sk/browser/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Aktualizácia softvéru
-Info=Firefox inštaluje aktualizácie, po chvíli sa spustí…
+InfoText=%MOZ_APP_DISPLAYNAME% inštaluje aktualizácie, po chvíli sa spustí…
