--- a/uk/browser/chrome/browser/places/places.properties
+++ b/uk/browser/chrome/browser/places/places.properties
@@ -118,3 +118,10 @@ bookmarkResultLabel=Закладка
 bookmarksLivemarkFailed=Живій закладці не вдалось завантажитись.
 bookmarksLivemarkLoading=Жива закладка завантажується…
 saveSearch.inputDefaultText=Новий запит
+
+# FIXME: localize
+# LOCALIZATION NOTE (lockPrompt.text)
+lockPrompt.text=Система закладок та історії не функціонує через те що один з файлiв %S використовується іншою програмою. Дії деяких захисних програм (скажімо, антивірусів) можуть бути причиною.
+lockPrompt.title=Помилка запуску браузера
+lockPromptInfoButton.accessKey=Д
+lockPromptInfoButton.label=Дізнатись більше
