--- a/uk/dom/chrome/dom/dom.properties
+++ b/uk/dom/chrome/dom/dom.properties
@@ -61,3 +61,6 @@ EmptyGetElementByIdParam=Пустий рядок було передано у ge
 
 LowMemoryMessage=Скрипт на цій сторінці був зупинений через брак пам’яті.
 LowMemoryTitle=Попередження: мало пам’яті
+
+# FIXME: localize
+WrongEventPropertyAccessWarning=The '%S' property of a %S event should not be used. The value is meaningless.
