l10n for bug 451995 - implement archive method for auto-saving mail

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -157,6 +157,7 @@ draftsFolderName    = Szkice
 templatesFolderName = Szablony
 outboxFolderName    = Wychodzące
 junkFolderName      = Niechciane
+archivesFolderName  = Archiwum
 specialFolderDeletionErr      = Usuwanie specjalnego folderu %S jest niedozwolone dla kont IMAP.
 specialFolderDeletionErrTitle = Usuwanie specjalnego folderu
 priorityLowest      = Najniższy
