Bug 471086 - Provide a silent eval command.

--- a/fr/extensions/irc/chrome/chatzilla.properties
+++ b/fr/extensions/irc/chrome/chatzilla.properties
@@ -298,6 +298,9 @@ cmd.enable-plugin.help   = Réactive un plugin désactivé par l'appel à |disab
 cmd.eval.params = <expression>
 cmd.eval.help   = Exécute <expression> en tant que code JavaScript.
 
+cmd.evalsilent.params = <expression>
+cmd.evalsilent.help   = Identique à la commande /eval, excepté que les lignes [EVAL-IN] et [EVAL-OUT] ne sont pas affichées.
+
 cmd.except.params = [<nickname>]
 cmd.except.help   = Exempte un utilisateur de se faire bannir d'un salon. Le pseudonyme d'un utilisateur peut être spécifié, ou un masque d'hôte correct. Sans argument, la liste des exemptions en cours sera affichée.
 
