add archive folder command, 451995, r=standard8, sr=neil

--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -169,6 +169,7 @@ draftsFolderName=Concepten
 templatesFolderName=Sjablonen
 outboxFolderName=Postvak UIT
 junkFolderName=Ongewenst
+archivesFolderName=Archieven
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
