--- a/fr/suite/chrome/mailnews/news.properties
+++ b/fr/suite/chrome/mailnews/news.properties
@@ -46,8 +46,10 @@ removeExpiredArtLinkText=Cliquez ici pour enlever tous les articles qui ont expi
 cancelDisallowed=Ce message n'est manifestement pas de vous. Vous pouvez seulement annuler les messages que vous avez envoyés vous-même.
 cancelConfirm=Voulez-vous vraiment annuler ce message ?
 messageCancelled=Message annulé.
-enterUsername=Veuillez entrer un nom d'utilisateur pour l'accès au serveur de groupes :
-enterPassword=Veuillez entrer un mot de passe pour l'accès au serveur de groupes :
+enterUsername=Veuillez saisir un nom d'utilisateur pour l'accès au serveur de groupes :
+enterUsernameTitle=Nom d'utilisateur de serveur de groupes requis
+saveUsername=Utiliser le gestionnaire de mots de passe pour se rappeler cette valeur.
+enterPassword=Veuillez saisir un mot de passe pour l'accès au serveur de groupes :
 enterPasswordTitle=Mot de passe du serveur de groupes
 okButtonText=Téléchargement
 
