--- a/he/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/he/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -34,21 +34,93 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+
+
+# The following are used by the outlook express import code to display status/error 
+# and informational messages
+#
+
+# Short name of import module
+## @name EUDORAIMPORT_NAME
+## @loc None
 2000 = Eudora
-2001 = דואר ופנקסי כתובות של Eudora
+### 2001 = דואר ופנקסי כתובות של Eudora
+
+# Description of import module
+## @name EUDORAIMPORT_DESCRIPTION
+## @loc None
+2029=דואר של Eudora, ספרי כתובות והגדרות
+
+# Success message
+## @name EUDORAIMPORT_MAILBOX_SUCCESS
+## @loc None
+# LOCALIZATION NOTE (2002): In the following sentence,
+# the %S represents a string to be inserted at runtime (the name of the Mailbox), 
+# and the %d is a number (the number of messages imported). Do not translate %d or %S, but
+# instead insert them in your text at the appropriate plac
 2002 = תיבת דואר %S, יובאו %d הודעות
+
+# Error message
+## @name EUDORAIMPORT_MAILBOX_BADPARAM
+## @loc None
 2003 = פרמטר שגוי הועבר ליבוא תיבת דואר.
+
+# Error message
+## @name EUDORAIMPORT_MAILBOX_BADSOURCEFILE
+## @loc None
+# LOCALIZATION NOTE (2004): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the name of the mailbox.
 2004 = שגיאה בגישה לקובץ עבור תיבת דואר %S.
+
+# Error message
+## @name EUDORAIMPORT_MAILBOX_CONVERTERROR
+## @loc None
+# LOCALIZATION NOTE (2005): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the name of the mailbox.
 2005 = שגיאה ביבוא תיבת דואר %S, יתכן ולא כל ההודעות יובאו מתיבת דואר זו.
+# Description
+## @name EUDORAIMPORT_ACCOUNTNAME
+## @loc None
+# LOCALIZATION NOTE (2006): Do not translate "Eudora" below.
 2006 = הגדרות Eudora
+
+# Description
+## @name EUDORAIMPORT_NICKNAMES_NAME
+## @loc None
+# LOCALIZATION NOTE (2007): Do not translate "Eudora" below.
 2007 = כינויים של Eudora
+
+# Description
+## @name EUDORAIMPORT_ADDRESS_SUCCESS
+## @loc None
+# LOCALIZATION NOTE (2008): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the name of the address book.
 2008 = יובא פנקס כתובות %S
+
+# Error message
+## @name EUDORAIMPORT_ADDRESS_BADPARAM
+## @loc None
 2009 = פרמטר שגוי הועבר ליבוא פנקס כתובות.
+
+# Error message
+## @name EUDORAIMPORT_ADDRESS_BADSOURCEFILE
+## @loc None
+# LOCALIZATION NOTE (2010): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the name of the address book.
 2010 = שגיאה בגישה לקובץ עבור פנקס כתובות %S.
+
+# Error message
+## @name EUDORAIMPORT_ADDRESS_CONVERTERROR
+## @loc None
+# LOCALIZATION NOTE (2011): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the name of the address book.
 2011 = שגיאה ביבוא פנקס כתובות %S, יתכן ולא כל הכתובות יובאו.
 
-
-
+# Description
+## @name EUDORAIMPORT_ADDRESS_LABEL_HOMEMOBILE
+## @loc None
+# LOCALIZATION NOTE (2012): In the following sentence, do not translate the "%S". Instead,
+# place it in your sentence where you wish to display the mobile phone number.
 2012=נייד אישי: %S
 
 # Description
@@ -129,16 +201,6 @@
 2027=שם כותר לא נמצא
 
 # Description
-## @name EUDORAIMPORT_FILTERS_WARN_MAILBOX_MISSING
-## @loc None
-# LOCALIZATION NOTE (2025): This warning is displayed when a filter has an action to
-# transfer the message to a mailbox, but the named mailbox doesn't exist.  The %S will
-# be replaced with the name of the mailbox.
-
-2025=לא ניתן למצוא תיבה "%S"
-
-
-# Description
 ## @name EUDORAIMPORT_FILTERS_WARN_NEGATE_VERB
 ## @loc None
 # LOCALIZATION NOTE (2023): This warning is displayed when a filter term needs to be
@@ -157,3 +219,12 @@
 # the name of the pseudo-header.
 
 2028=לא ניתן לייבא את הכותר המדומה %S 
+
+# Description
+## @name EUDORAIMPORT_FILTERS_WARN_MAILBOX_MISSING
+## @loc None
+# LOCALIZATION NOTE (2025): This warning is displayed when a filter has an action to
+# transfer the message to a mailbox, but the named mailbox doesn't exist.  The %S will
+# be replaced with the name of the mailbox.
+
+2025=לא ניתן למצוא תיבה "%S"
