l10n for bug 433316 - implement backend changes for MailNews transfer from wallet to login manager

--- a/pl/mail/chrome/messenger/news.properties
+++ b/pl/mail/chrome/messenger/news.properties
@@ -51,6 +51,8 @@ cancelConfirm           = Czy na pewno wycofać tę wiadomość?
 messageCancelled        = Wiadomość została wycofana.
 enterUsername           = Wprowadź nazwę użytkownika dla serwera grup dyskusyjnych:
 enterPassword           = Wprowadź hasło dostępu do serwera grup dyskusyjnych:
+enterUsernameTitle      = Wymagana nazwa użytkownika serwera grup dyskusyjnych
+saveUsername            = Użyj Menedżera haseł, aby zapamiętać tę wartość.
 enterPasswordTitle      = Wymagane hasło serwera grup dyskusyjnych
 okButtonText            = Pobierz
 noNewMessages           = Na serwerze nie ma nowych wiadomości.
