calendar, mail, chatzilla and suite catalan update

--- a/ca/extensions/irc/chrome/chatzilla.properties
+++ b/ca/extensions/irc/chrome/chatzilla.properties
@@ -71,7 +71,7 @@
 
 locale.version = 0.9.83
 locale.error = Esteu utilitzant el ChatZilla %1$S, que necessita la versió de «locale» %2$S. El «locale» seleccionat actualment, %3$S, és a la versó %4$S. Per aquest motiu, podeu tenir problemes executant el ChatZilla.\n\nÉs molt recomanable doncs que actualitzeu or suprimiu aqueixa versió del ChatZilla.
-
+locale.authors = Toni Hermoso; Joaquim Perez
 
 unknown = <desconegut>
 none = <none>
@@ -927,7 +927,9 @@ msg.commands.header = Escriviu /help <nom d'ordre> per a obtenir informació sob
 msg.matching.commands = Les ordres implementades actualment que coincideixen amb el patró ``%S'' són [%S].\nEscriviu /help nom de l'ordre <command-name> per a obtenir-ne'n més informació.
 msg.all.commands = Les ordres implementades actualment són [%S].
 msg.help.intro        = Hi ha ajuda disponible des de molts llocs:\n  - |/commands| mostra totes les ordres internes del ChatZilla. Utilitzeu |/help <command-name>| per a obtenir ajuda a nivell individual.\n  - El lloc web d'ajuda d'IRC <http://www.irchelp.org/> proporciona material introductori per a aquells nous usuaris d'IRC.\n  - Les PMF del ChatZilla <http://chatzilla.hacksrus.com/faq> responen a moltes de les pregüntes més freqüents en l'ús del ChatZilla.\n  - El canal de suport del ChatZilla <irc://moznet/chatzilla> és sempre disponible per a respondre qualsevol altra pregunta.
-msg.homepage = Si us plau, visiteu la pàgina del ChatZilla a <http://www.softcatala.org/wiki/ChatZilla> per a més informació. 
+msg.about.version     = "%S [[Detalls][Obre el diàleg Quant a per a més informació][%S]]
+msg.about.homepage    = Per a més informació visiteu el web ChatZilla a <http://chatzilla.hacksrus.com/>.
+msg.homepage = Per a més informació visiteu la pàgina del ChatZilla a <http://www.softcatala.org/wiki/ChatZilla>. 
 msg.client.opened = La consola JavaScript per a ``*client*'' és oberta.
 msg.newnick.you = Ara sou conegut com a %S
 msg.newnick.notyou = Ara, %S es coneix com a %S
