--- a/ca/suite/chrome/mailnews/news.properties
+++ b/ca/suite/chrome/mailnews/news.properties
@@ -50,6 +50,8 @@ cancelDisallowed=No sembla que aquest missatge sigui vostre. Només podeu cancel
 cancelConfirm=Esteu segur que voleu cancel·lar aquest missatge?
 messageCancelled=S'ha cancel·lat el missatge.
 enterUsername=Si us plau, introduïu un nom d'usuari per a l'accés al servidor de grups de discussió
+enterUsernameTitle=Nom d'usuari del servidor de grups de discussió
+saveUsername=Utilitza el gestor de contrasenyes per a recordar-la.
 enterPassword=Si us plau, introduïu una contrasenya per a l'accés al servidor de grups de discussió
 enterPasswordTitle=Cal una contrasenya per al servidor de grups de discussió
 okButtonText=Baixa
