--- a/ca/browser/installer/custom.properties
+++ b/ca/browser/installer/custom.properties
@@ -51,56 +51,56 @@
 # from en-US contains a \n.
 
 REG_APP_DESC=El $BrandShortName proporciona una navegació fàcil i segura. Una interfície d'usuari familiar, característiques avançades de seguretat, incloent-hi protecció davant de la suplantació de la identitat, i cerques integrades que us permetenn treure el màxim de la Web.
-STATUS_INSTALL_APP=S'està instal·lant el $BrandShortName…
-UN_CONFIRM_PAGE_TITLE=Desinstal·la el $BrandFullName
+STATUS_INSTALL_APP=S'està instaŀlant el $BrandShortName…
+UN_CONFIRM_PAGE_TITLE=Desinstaŀla el $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Suprimeix el $BrandFullName del vostre ordinador.
-UN_CONFIRM_UNINSTALLED_FROM=El $BrandShortName es desinstal·larà de la següent ubicació:
-UN_CONFIRM_CLICK=Feu clic a Desinstal·la per a continuar.
+UN_CONFIRM_UNINSTALLED_FROM=El $BrandShortName es desinstaŀlarà de la següent ubicació:
+UN_CONFIRM_CLICK=Feu clic a Desinstaŀla per a continuar.
 UN_REMOVE_PROFILES=Sup&rimeix les dades pròpies i les personalitzacions del $BrandShortName
-UN_REMOVE_PROFILES_DESC=Se suprimiran definitivament les vostres adreces d'interès, contrasenyes desades, galetes i personalitzacions. Podeu desitjar conservar aqueixa informació si planegeu d'instal·lar una versió del $BrandShortName en el futur.
-BANNER_CHECK_EXISTING=S'està comprovant si hi ha cap instal·lació present…
-STATUS_INSTALL_LANG=S'estan instal·lant els fitxers de llengua (${AB_CD})…
-STATUS_UNINSTALL_MAIN=S'està desinstal·lant el $BrandShortName…
+UN_REMOVE_PROFILES_DESC=Se suprimiran definitivament les vostres adreces d'interès, contrasenyes desades, galetes i personalitzacions. Podeu desitjar conservar aqueixa informació si planegeu d'instaŀlar una versió del $BrandShortName en el futur.
+BANNER_CHECK_EXISTING=S'està comprovant si hi ha cap instaŀlació present…
+STATUS_INSTALL_LANG=S'estan instaŀlant els fitxers de llengua (${AB_CD})…
+STATUS_UNINSTALL_MAIN=S'està desinstaŀlant el $BrandShortName…
 STATUS_CLEANUP=Una mica de manteniment…
 
 CONTEXT_OPTIONS=&Opcions del $BrandShortName
 CONTEXT_SAFE_MODE=Mode &segur del $BrandShortName
 
 SAFE_MODE=Mode segur
-OPTIONS_PAGE_TITLE=Tipus d'instal·lació
-OPTIONS_PAGE_SUBTITLE=Trieu les opcions d'instal·lació
+OPTIONS_PAGE_TITLE=Tipus d'instaŀlació
+OPTIONS_PAGE_SUBTITLE=Trieu les opcions d'instaŀlació
 OPTIONS_MAKE_DEFAULT=&Utilitza el $BrandShortName com a meu navegador per defecte
 SHORTCUTS_PAGE_TITLE=Definició de les dreceres
 SHORTCUTS_PAGE_SUBTITLE=Crea les icones de programa
 SUMMARY_PAGE_TITLE=Resum
-SUMMARY_PAGE_SUBTITLE=A punt per a instal·lar el $BrandShortName
-SUMMARY_INSTALLED_TO=El $BrandShortName s'instal·larà en la següent ubicació:
-SUMMARY_REBOOT_REQUIRED_INSTALL=Pot caler un reinici de l'ordinador per a acabar la instal·lació.
-SUMMARY_REBOOT_REQUIRED_UNINSTALL=Pot caler un reinici de l'ordinador per a acabar la desinstal·lació.
+SUMMARY_PAGE_SUBTITLE=A punt per a instaŀlar el $BrandShortName
+SUMMARY_INSTALLED_TO=El $BrandShortName s'instaŀlarà en la següent ubicació:
+SUMMARY_REBOOT_REQUIRED_INSTALL=Pot caler un reinici de l'ordinador per a acabar la instaŀlació.
+SUMMARY_REBOOT_REQUIRED_UNINSTALL=Pot caler un reinici de l'ordinador per a acabar la desinstaŀlació.
 SUMMARY_MAKE_DEFAULT=Es definirà el $BrandShortName com el vostre navegador per defecte.
-SUMMARY_CLICK=Feu clic a Instal·la per a continuar.
+SUMMARY_CLICK=Feu clic a Instaŀla per a continuar.
 SURVEY_TEXT=&Digueu-nos què en penseu del $BrandShortName
 LAUNCH_TEXT=&Executa ara el $BrandFullName
 CREATE_ICONS_DESC=Crea icones del $BrandShortName:
 ICONS_DESKTOP=Al meu &escriptori
 ICONS_STARTMENU=A la carpeta de programes del menú &Inicia
 ICONS_QUICKLAUNCH=A la barra d'e&xecució ràpida
-WARN_MANUALLY_CLOSE_APP_INSTALL=Cal tancar el $BrandFullName per a procedir amb la instal·lació.\n\nTanqueu el $BrandFullName per a continuar.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=Cal tancar el $BrandFullName per a procedir amb la desinstal·lació.\n\nTanqueu el $BrandFullName per a continuar.
-WARN_MANUALLY_CLOSE_APP_LAUNCH=El $BrandFullName ja s'està executant.\n\nTanqueu el $BrandFullName abans d'executar la versió que acabeu d'instal·lar.
-WARN_WRITE_ACCESS=No teniu permisos d'escriptura al directori d'instal·lació.\n\nFeu clic a D'acord per a seleccionar un directori diferent.
-WARN_DISK_SPACE=No teniu suficient espai de disc per a poder instal·lar en aquesta ubicació.\n\nFeu clic a D'acord per a seleccionar una ubicació diferent.
-WARN_UNSUPPORTED_MSG=El $BrandShortName no pot instal·lar-se. Aquesta versió del $BrandShortName requereix com a mínim un ${MinUnsupportedVer}.
-WARN_RESTART_REQUIRED_UNINSTALL=Cal reinciar el vostre ordinador per a acabar una desinstal·lació anterior del $BrandShortName. Voleu reiniciar ara mateix?
+WARN_MANUALLY_CLOSE_APP_INSTALL=Cal tancar el $BrandFullName per a procedir amb la instaŀlació.\n\nTanqueu el $BrandFullName per a continuar.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=Cal tancar el $BrandFullName per a procedir amb la desinstaŀlació.\n\nTanqueu el $BrandFullName per a continuar.
+WARN_MANUALLY_CLOSE_APP_LAUNCH=El $BrandFullName ja s'està executant.\n\nTanqueu el $BrandFullName abans d'executar la versió que acabeu d'instaŀlar.
+WARN_WRITE_ACCESS=No teniu permisos d'escriptura al directori d'instaŀlació.\n\nFeu clic a D'acord per a seleccionar un directori diferent.
+WARN_DISK_SPACE=No teniu suficient espai de disc per a poder instaŀlar en aquesta ubicació.\n\nFeu clic a D'acord per a seleccionar una ubicació diferent.
+WARN_UNSUPPORTED_MSG=El $BrandShortName no pot instaŀlar-se. Aquesta versió del $BrandShortName requereix com a mínim un ${MinUnsupportedVer}.
+WARN_RESTART_REQUIRED_UNINSTALL=Cal reinciar el vostre ordinador per a acabar una desinstaŀlació anterior del $BrandShortName. Voleu reiniciar ara mateix?
 WARN_RESTART_REQUIRED_UPGRADE=Cal reinciar el vostre ordinador per a acabar una actualització anterior del $BrandShortName. Voleu reiniciar ara mateix?
 ERROR_CREATE_DIRECTORY_PREFIX=S'ha produït un error en crear el directori:
-ERROR_CREATE_DIRECTORY_SUFFIX=Feu clic a cancel·la per a aturar la instal·lació o\nReintenta per a tornar-ho a provar.
+ERROR_CREATE_DIRECTORY_SUFFIX=Feu clic a canceŀla per a aturar la instaŀlació o\nReintenta per a tornar-ho a provar.
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Trieu el tipus d'instal·lació que preferiu, llavors feu clic a Següent.
+OPTIONS_SUMMARY=Trieu el tipus d'instaŀlació que preferiu, llavors feu clic a Següent.
 # One line
-OPTION_STANDARD_DESC=El $BrandShortName s'instal·larà amb les opcions més comunes.
+OPTION_STANDARD_DESC=El $BrandShortName s'instaŀlarà amb les opcions més comunes.
 OPTION_STANDARD_RADIO=E&stàndard
-OPTION_CUSTOM_DESC=Podeu triar les opcions individuals que s'instal·laran. Recomanat per a usuaris avançats.
+OPTION_CUSTOM_DESC=Podeu triar les opcions individuals que s'instaŀlaran. Recomanat per a usuaris avançats.
 OPTION_CUSTOM_RADIO=&Personalitzada
