--- a/ca/browser/installer/override.properties
+++ b/ca/browser/installer/override.properties
@@ -56,34 +56,34 @@
 # beginning and end of the string (e.g. ""This will include quotes"").
 
 
-SetupCaption=Instal·lació del $BrandFullName
-UninstallCaption=Desinstal·lació del $BrandFullName
+SetupCaption=Instaŀlació del $BrandFullName
+UninstallCaption=Desinstaŀlació del $BrandFullName
 BackBtn=< En&rere
 NextBtn=En&davant >
 AcceptBtn=&Accepto els termes de l'acord de llicència
 DontAcceptBtn=&No accepto els termes de l'acord de llicència
-InstallBtn=&Instal·la
-UninstallBtn=&Desinstal·la
-CancelBtn=&Cancel·la
+InstallBtn=&Instaŀla
+UninstallBtn=&Desinstaŀla
+CancelBtn=&Canceŀla
 CloseBtn=&Tanca
 BrowseBtn=&Navega…
 ShowDetailsBtn=&Mostra els detalls
 ClickNext=Feu clic a Endavant per a continuar.
-ClickInstall=Feu clic a Instal·la per a iniciar la instal·lació.
-ClickUninstall=Feu clic a Desinstal·la per a iniciar la desinstal·lació.
+ClickInstall=Feu clic a Instaŀla per a iniciar la instaŀlació.
+ClickUninstall=Feu clic a Desinstaŀla per a iniciar la desinstaŀlació.
 Completed=S'ha acabat
-LicenseTextRB=Reviseu l'acord de llicència abans d'instal·lar el $BrandFullNameDA. Si accepteu tots els termes de l'acord, seleccioneu la primera opció de sota. $_CLICK
-ComponentsText=Activeu els components que voleu instal·lar i desactiveu els que no. $_CLICK
-ComponentsSubText2_NoInstTypes=Seleccioneu els components per instal·lar:
-DirText=S'instal·larà el $BrandFullNameDA en la carpeta següent. Per a instal·lar-lo en una carpeta diferent, feu clic a Navega i seleccioneu una altra carpeta. $_CLICK
+LicenseTextRB=Reviseu l'acord de llicència abans d'instaŀlar el $BrandFullNameDA. Si accepteu tots els termes de l'acord, seleccioneu la primera opció de sota. $_CLICK
+ComponentsText=Activeu els components que voleu instaŀlar i desactiveu els que no. $_CLICK
+ComponentsSubText2_NoInstTypes=Seleccioneu els components per instaŀlar:
+DirText=S'instaŀlarà el $BrandFullNameDA en la carpeta següent. Per a instaŀlar-lo en una carpeta diferent, feu clic a Navega i seleccioneu una altra carpeta. $_CLICK
 DirSubText=Carpeta de destinació
-DirBrowseText=Seleccioneu la carpeta on s'instal·larà el $BrandFullNameDA:
+DirBrowseText=Seleccioneu la carpeta on s'instaŀlarà el $BrandFullNameDA:
 SpaceAvailable="Espai disponible: "
 SpaceRequired="Espai necessari: "
-UninstallingText=El $BrandFullNameDA es desinstal·larà de la capeta següent. $_CLICK
-UninstallingSubText=S'està desinstal·lant de:
-FileError=S'ha produït un error en obrir un fitxer per a escriure-hi: \r\n\r\n$0\r\n\r\nFeu clic a Abandona per a aturar la instal·lació,\r\nReintenta per a tornar-ho a provar, o\r\nIgnora per a ometre aquest fitxer.
-FileError_NoIgnore=S'ha produït un error en obrir un fitxer per a escriure-hi: \r\n\r\n$0\r\n\r\nFeu clic a Reintenta per a tornar-ho a provar, o\r\nCancel·la per a aturar la instal·lació.
+UninstallingText=El $BrandFullNameDA es desinstaŀlarà de la capeta següent. $_CLICK
+UninstallingSubText=S'està desinstaŀlant de:
+FileError=S'ha produït un error en obrir un fitxer per a escriure-hi: \r\n\r\n$0\r\n\r\nFeu clic a Abandona per a aturar la instaŀlació,\r\nReintenta per a tornar-ho a provar, o\r\nIgnora per a ometre aquest fitxer.
+FileError_NoIgnore=S'ha produït un error en obrir un fitxer per a escriure-hi: \r\n\r\n$0\r\n\r\nFeu clic a Reintenta per a tornar-ho a provar, o\r\nCanceŀla per a aturar la instaŀlació.
 CantWrite="No es pot escriure: "
 CopyFailed=La còpia ha fallat
 CopyTo="Copia a "
@@ -93,18 +93,18 @@ SymbolNotFound="No s'ha trobat el símbol: "
 CouldNotLoad="No s'ha pogut carregar: "
 CreateFolder="Crea la carpeta: "
 CreateShortcut="Crea la drecera: "
-CreatedUninstaller="S'ha creat el desinstal·lador: "
+CreatedUninstaller="S'ha creat el desinstaŀlador: "
 Delete="Suprimeix el fitxer: "
 DeleteOnReboot="Suprimeix en reiniciar: "
 ErrorCreatingShortcut="S'ha produït un error en crear la drecera: "
 ErrorCreating="S'ha produït un error en crear: "
-ErrorDecompressing=S'ha produït un error en descomprimir les dades! L'instal·lador està corrupte?
+ErrorDecompressing=S'ha produït un error en descomprimir les dades! L'instaŀlador està corrupte?
 ErrorRegistering=S'ha produït un error en registrar una DLL
 ExecShell="Intèrpret d'ordres: "
 Exec="Executa: "
 Extract="Extreu: "
 ErrorWriting="Extreu: s'ha produït un error en escriure al fitxer "
-InvalidOpcode=L'instal·lador està corrupte: el codi d'operació no és vàlid
+InvalidOpcode=L'instaŀlador està corrupte: el codi d'operació no és vàlid
 NoOLE="No hi ha OLE per a: "
 OutputFolder="Carpeta de sortida: "
 RemoveFolder="Suprimeix la carpeta: "
@@ -112,7 +112,7 @@ RenameOnReboot="Reanomena en reiniciar: "
 Rename="Reanomena: "
 Skipped="S'ha omès: "
 CopyDetails=Copia els detalls al porta-retalls
-LogInstall=Registra el procés d'instal·lació
+LogInstall=Registra el procés d'instaŀlació
 Byte=B
 Kilo=k
 Mega=M
