L10n for bug 433316 - Implement backend changes for MailNews transfer from wallet to login manager.

--- a/sv-SE/mail/chrome/messenger/news.properties
+++ b/sv-SE/mail/chrome/messenger/news.properties
@@ -51,6 +51,8 @@ cancelDisallowed=Detta meddelande verkar inte komma från dig. Du kan endast ta 
 cancelConfirm=Är du säker på att du vill ta tillbaka meddelandet?
 messageCancelled=Meddelandet har tagits tillbaka.
 enterUsername=Ange användarnamnet:
+enterUsernameTitle=Servern för diskussionsgrupper kräver användarnamn
+saveUsername=Spara denna inloggning.
 enterPassword=Ange lösenordet:
 enterPasswordTitle=Servern för diskussionsgrupper kräver lösenord
 okButtonText=Hämta
