--- a/ca/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/ca/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -74,7 +74,7 @@ Patch=S'està apedaçant: %s
 Uninstall=S'està desinstaŀlant: %s
 
 RegSkin=Registra l'aparença: %s
-RegLocale=Registra el local: %s
+RegLocale=Registra el joc de paràmetres locals: %s
 RegContent=Registra el contingut: %s
 RegPackage=Registra el paquet: %s
 
@@ -83,10 +83,10 @@ RegPackage=Registra el paquet: %s
 #--------------------------------------------------------------------
 
 ApplyNowSkin=Utilitza aquest tema
-ApplyNowLocale=Utilitza aquest local
+ApplyNowLocale=Utilitza aquesta configuració local
 
 ConfirmSkin=Voleu instaŀlar el tema «%1$S» de %2$S?
-ConfirmLocale=Voleu instaŀlar el local «%1$S» de %2$S?
+ConfirmLocale=Voleu instaŀlar el joc de paràmetres locals «%1$S» de %2$S?
 
 OK=Instaŀla
 
