--- a/ca/extensions/irc/chrome/chatzilla.properties
+++ b/ca/extensions/irc/chrome/chatzilla.properties
@@ -70,7 +70,7 @@
 ### End of notes ###
 
 locale.version = 0.9.83
-locale.error = Esteu utilitzant el ChatZilla %1$S, que necessita la versió de «locale» %2$S. El «locale» seleccionat actualment, %3$S, és a la versó %4$S. Per aquest motiu, podeu tenir problemes executant el ChatZilla.\n\nÉs molt recomanable doncs que actualitzeu or suprimiu aqueixa versió del ChatZilla.
+locale.error = Esteu utilitzant el ChatZilla %1$S, que necessita la versió %2$S del joc de paràmetres locals. El seleccionat actualment, %3$S, és a la versió %4$S. Per aquest motiu, podeu tenir problemes executant el ChatZilla.\n\nÉs molt recomanable doncs que actualitzeu or suprimiu aqueixa versió del ChatZilla.
 locale.authors = Toni Hermoso; Joaquim Perez
 
 unknown = <desconegut>
