--- a/sq/security/manager/chrome/pipnss/pipnss.properties
+++ b/sq/security/manager/chrome/pipnss/pipnss.properties
@@ -170,8 +170,8 @@ CertDumpKUDEnc=Shifrim të Dhënash
 CertDumpKUKA=Marrëveshje Kyçi
 CertDumpKUCertSign=Nënshkrues Dëshmish
 CertDumpKUCRLSigner=Nënshkrues CRL
-CertDumpCritical=Kritik
-CertDumpNonCritical=Jo Kritik
+CertDumpCritical=Kritike
+CertDumpNonCritical=Jo Kritike
 CertDumpSigAlg=Algoritëm Nëshkrimi Dëshmie
 CertDumpCertSig=Vlerë Nënshkrimi Dëshmie
 CertDumpExtensionFailure=Gabim: I pazoti të kryejë zgjerimin
