--- a/fr/security/manager/chrome/pipnss/pipnss.properties
+++ b/fr/security/manager/chrome/pipnss/pipnss.properties
@@ -333,7 +333,7 @@ UnknownCertOrg=(Organisation inconnue)
 AVATemplate=%S = %S
 
 PSMERR_SSL_Disabled=Connexion sécurisée impossible car le protocole SSL a été désactivé.
-PSMERR_SSL2_Disabled=Connexion sécurisée impossible car le site utilise une ancienne version non sôre du protocole SSL.
+PSMERR_SSL2_Disabled=Connexion sécurisée impossible car le site utilise une ancienne version non sûre du protocole SSL.
 PSMERR_HostReusedIssuerSerial=Vous avez reçu un certificat invalide. Veuillez contacter l'administrateur du serveur ou votre correspondant de messagerie et fournissez-lui les informations suivantes :\n\nVotre certificat contient le même numéro de série qu'un autre certificat émis par l'autorité de certification. Veuillez vous procurer un nouveau certificat avec un numéro de série unique.
 
 SSLConnectionErrorPrefix=Une erreur est survenue pendant une connexion à %S.
