Aviary.pl bug 2180 - Change three dots to ellipsises; r=marcoos

--- a/pl/dom/chrome/layout/xbl.properties
+++ b/pl/dom/chrome/layout/xbl.properties
@@ -18,7 +18,7 @@
 # (C) 2003.  All Rights Reserved.
 #
 # Contributor(s):
-#	Marek Stepien <marcoos@aviary.pl> (Polish l10n)
+#	Marek Stępień <marcoos@aviary.pl> (Polish localization)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -40,5 +40,5 @@ GTK2Conflict=Zdarzenie naciśnięcia klawisza jest niedostępne na GTK2: key="%S
 WinConflict=Zdarzenie naciśnięcia klawisza jest niedostępne przy niektórych układach klawiatury: key="%S" modifiers="%S"
 TooDeepBindingRecursion=Wiązanie XBL "%S" jest już używane przez zbyt wiele elementów nadrzędnych; w celu uniknięcia nieskończonej rekurencji, nie zostanie ono nałożone.
 CircularExtendsBinding=Rozszerzanie wiązania XBL "%S" o "%S" spowodowałoby, że wiązanie to rozszerzałoby samo siebie.
-CommandNotInChrome=Stosowanie <handler command="..."> nie jest dozwolone poza chrome.
+CommandNotInChrome=Stosowanie <handler command="…"> nie jest dozwolone poza chrome.
 InvalidExtendsBinding=Rozszerzanie "%S" jest niewłaściwe. Nie należy rozszerzać nazw znaczników.
