--- a/pl/extensions/reporter/chrome/reportWizard.properties
+++ b/pl/extensions/reporter/chrome/reportWizard.properties
@@ -1,7 +1,7 @@
 submitReport=Wyślij zgłoszenie                                                   
 submitReport.accesskey=z
 
-sendingReport=Wysyłanie zgłoszenia...
+sendingReport=Wysyłanie zgłoszenia…
 reportSent=Zgłoszenie zostało wysłane
 
 finishError=Błąd podczas wysyłania zgłoszenia
