--- a/pl/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/pl/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -18,7 +18,7 @@
 # Contributors:
 #     Samir Gehani <sgehani@netscape.com>
 #     Daniel Veditz <dveditz@netscape.com>
-#     Marek Stepien <marcoos@aviary.pl> (Polish localization)
+#     Marek Stępień <marcoos@aviary.pl> (Polish localization)
 #     Marek Wawoczny <GmbH@mozillapl.org>  (Polish localization)
 #     Peter Bartecki <pbartecki@mozillapl.org>  (Polish localization)
 #
@@ -59,9 +59,9 @@ ConfirmSkin=Zainstalować motyw "%1$S" z %2$S?
 ConfirmLocale=Zainstalować ustawienia lokalne "%1$S" z %2$S?
 OK=Zainstaluj
 progress.queued=W kolejce
-progress.downloading=Pobieranie...
+progress.downloading=Pobieranie…
 progress.downloaded=Pobieranie zakończono
-progress.installing=Instalowanie...
+progress.installing=Instalowanie…
 Unsigned=Niepodpisany
 ERROR=BŁĄD
 error0=Instalacja powiodła się
