--- a/pl/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/pl/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -107,7 +107,7 @@ fileDoesNotExistOpenTitle=Problemy z otworzeniem pliku %S
 fileDoesNotExistShowTitle=Nie można otworzyć pliku %S
 fileDoesNotExistError=Plik %S nie istnieje. Mógł zostać usunięty lub przeniesiony, albo zmieniono jego nazwę po pobraniu.
 
-chooseAppFilePickerTitle=Otwórz za pomocą...
+chooseAppFilePickerTitle=Otwórz za pomocą…
 
 # LOCALIZATION NOTE (downloadsTitleFiles, downloadsTitlePercent): Semi-colon list of
 # plural forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -124,5 +124,5 @@ displayNameDesktop=Pulpit
 # Desktop folder name for downloaded files
 # FIXME: en-US: downloadsFolder=Downloads
 # Wg http://windowshelp.microsoft.com/Windows/pl-pl/help/b8f62a7d-381a-4253-a52e-04883e076bbe1045.mspx
-# w Viście PL mamy "Pobieranie", co jest dość niefajne, ale cóż...
+# w Viście PL mamy "Pobieranie", co jest dość niefajne, ale cóż…
 downloadsFolder=Pobieranie
