--- a/pl/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/pl/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -2,7 +2,7 @@ aboutWindowTitle=O dodatku %S
 aboutWindowCloseButton=Zamknij
 aboutWindowVersionString=wersja %S
 aboutAddon=%S - informacje
-updatingMsg=Poszukiwanie aktualizacji...
+updatingMsg=Poszukiwanie aktualizacji…
 updateCompatibilityMsg=Aktualizacja kompatybilności została zastosowana.
 updateNoUpdateMsg=Nie znaleziono żadnych aktualizacji.
 updateErrorMessage=Podczas poszukiwania aktualizacji dla elementu %S wystąpił błąd.
@@ -11,7 +11,7 @@ updateReadOnlyMessage=Aktualizacja nieobsługiwana (miejsce instalacji jest tylk
 updateNotManagedMessage=Aktualizacja nieobsługiwana (miejsce instalacji nie jest zarządzane przez program %S).
 incompatibleUpdateMessage=Program %S sprawdza dostępność aktualizacji dotyczących kompatybilności dla elementu %S.
 installSuccess=Instalacja zakończona powodzeniem.
-installWaiting=Oczekiwanie...
+installWaiting=Oczekiwanie…
 droppedInWarning=W folderze rozszerzeń znaleziono następujące elementy. Czy chcesz je zainstalować?
 updateNotificationTitle=Znaleziono aktualizacje dla dodatków
 updateNotificationText=Program %S znalazł aktualizację dla 1 z zainstalowanych dodatków
