--- a/pl/toolkit/chrome/mozapps/plugins/plugins.properties
+++ b/pl/toolkit/chrome/mozapps/plugins/plugins.properties
@@ -1,9 +1,9 @@
 pluginLicenseAgreement.label=Aby zainstalować %S, należy zaakceptować poniższe warunki:
 
-pluginInstallation.download.start=Pobieranie %S...
+pluginInstallation.download.start=Pobieranie %S…
 pluginInstallation.download.finish=Pobieranie %S ukończone.
 
-pluginInstallation.install.start=Instalowanie %S...
+pluginInstallation.install.start=Instalowanie %S…
 pluginInstallation.install.finish=Instalowanie %S zakończone powodzeniem.
 pluginInstallation.install.error=Nie udało się zainstalować %S (%S).
 
