--- a/pl/toolkit/chrome/mozapps/update/updates.properties
+++ b/pl/toolkit/chrome/mozapps/update/updates.properties
@@ -67,7 +67,7 @@ patchApplyFailure=Nie udało się zainstalować aktualizacji (nie udało się na
 
 # LOCALIZATION NOTE: When present %S is the update name provided by the remote
 # update xml for the following
-downloadingPrefix=Pobieranie elementu %S...
+downloadingPrefix=Pobieranie elementu %S…
 pausedName=Wstrzymano pobieranie elementu %S
 
 updateAvailable_minor.title=Dostępna jest nowa wersja: %S
