--- a/pl/browser/installer/override.properties
+++ b/pl/browser/installer/override.properties
@@ -19,7 +19,7 @@
 #
 # Contributor(s):
 #  Robert Strong <robert.bugzilla@gmail.com>
-#  Marek Stępień <marcoos@aviary.pl> (Polish translation)
+#  Marek Stępień <marcoos@aviary.pl> (Polish localization)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -66,7 +66,7 @@ InstallBtn=&Zainstaluj
 UninstallBtn=&Odinstaluj
 CancelBtn=Anuluj
 CloseBtn=Zam&knij
-BrowseBtn=Prze&glądaj...
+BrowseBtn=Prze&glądaj…
 ShowDetailsBtn=Wyświetl &szczegóły
 ClickNext=Naciśnij Dalej, by kontynuować.
 ClickInstall=Naciśnij Zainstaluj, by rozpocząć instalację.
