--- a/pl/dom/chrome/layout/HtmlForm.properties
+++ b/pl/dom/chrome/layout/HtmlForm.properties
@@ -19,7 +19,7 @@
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
-#	Marek Stepien <marcoos@aviary.pl>
+#	Marek Stępień <marcoos@aviary.pl>
 #	Zbigniew Braniekci <gandalf@aviary.pl>
 #
 # Alternatively, the contents of this file may be used under the terms of
@@ -38,7 +38,7 @@
 
 Reset=Zresetuj
 Submit=Wyślij zapytanie
-Browse=Przeglądaj...
+Browse=Przeglądaj…
 FileUpload=Wysyłanie pliku
 IsIndexPrompt=Ten indeks można wyszukiwać. Wprowadź słowa kluczowe:
 ForgotPostWarning=Formularz zawiera poprawną deklarację typu kodowania: enctype=%S, jednakże nie zawiera method=POST, dlatego zostanie przesłany z użyciem metody method=GET, a zmienna enctype zostanie pominięta.
