--- a/pl/dom/chrome/layout/layout_errors.properties
+++ b/pl/dom/chrome/layout/layout_errors.properties
@@ -20,7 +20,7 @@
 #
 # Contributor(s):
 #   Boris Zbarsky <bzbarsky@mit.edu>  (original author)
-#   Marek Stepien <marcoos@aviary.pl> (Polish l10n)
+#   Marek Stępień <marcoos@aviary.pl> (Polish localization)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -39,5 +39,5 @@
 ImageMapRectBoundsError=Atrybut "coords" znacznika <area shape="rect"> nie jest postaci "lewy,górny,prawy,dolny".
 ImageMapCircleWrongNumberOfCoords=Atrybut "coords" znacznika <area shape="circle"> nie jest postaci "środek-x,środek-y,promień".
 ImageMapCircleNegativeRadius=Atrybut "coords" znacznika <area shape="circle"> zawiera ujemny promień.
-ImageMapPolyWrongNumberOfCoords=Atrybut "coords" znacznika <area shape="poly"> nie jest postaci "x1,y1,x2,y2...".
-ImageMapPolyOddNumberOfCoords=W atrybucie "coords" znacznika <area shape="poly"> brakuje ostatniej współrzędnej "y" (prawidłowy format: "x1,y1,x2,y2 ...").
+ImageMapPolyWrongNumberOfCoords=Atrybut "coords" znacznika <area shape="poly"> nie jest postaci "x1,y1,x2,y2…".
+ImageMapPolyOddNumberOfCoords=W atrybucie "coords" znacznika <area shape="poly"> brakuje ostatniej współrzędnej "y" (prawidłowy format: "x1,y1,x2,y2…").
