--- a/pl/toolkit/chrome/global/gnomeprintdialog.properties
+++ b/pl/toolkit/chrome/global/gnomeprintdialog.properties
@@ -24,5 +24,5 @@ headerFooterURL=URL
 headerFooterDate=Data/czas
 headerFooterPage=Strona #
 headerFooterPageTotal=Strona # z #
-headerFooterCustom=Własne...
+headerFooterCustom=Własne…
 customHeaderFooterPrompt=Wprowadź własny tekst nagłówka/stopki
