Aviary.pl bug 2185 - Add a particle "czy" to quitCancelDownloadsAlertTitle and offlineCancelDownloadsAlertTitle

--- a/pl/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/pl/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -18,12 +18,12 @@ cannotPause=Pobieranie tego pliku nie może być wstrzymane
 downloadErrorAlertTitle=Błąd pobierania pliku
 downloadErrorGeneric=Nie można zapisać pobieranego pliku z powodu nieznanego błędu.\n\nNależy spróbować ponownie.
 
-quitCancelDownloadsAlertTitle=Anulować pobieranie wszystkich plików?
+quitCancelDownloadsAlertTitle=Czy anulować pobieranie wszystkich plików?
 quitCancelDownloadsAlertMsg=Jeśli skończysz teraz pracę programu, pobieranie bieżącego pliku zostanie anulowane. Czy na pewno chcesz zakończyć pracę programu?
 quitCancelDownloadsAlertMsgMultiple=Jeśli skończysz teraz pracę programu, pobieranie wszystkich %S plików zostanie anulowane. Czy na pewno chcesz zakończyć pracę programu?
 quitCancelDownloadsAlertMsgMac=Jeśli skończysz teraz pracę programu, pobieranie bieżącego pliku zostanie anulowane. Czy na pewno chcesz zakończyć pracę programu?
 quitCancelDownloadsAlertMsgMacMultiple=Jeśli skończysz teraz pracę programu, pobieranie wszystkich %S plików zostanie anulowane. Czy na pewno chcesz zakończyć pracę programu?
-offlineCancelDownloadsAlertTitle=Anulować pobieranie wszystkich plików?
+offlineCancelDownloadsAlertTitle=Czy anulować pobieranie wszystkich plików?
 offlineCancelDownloadsAlertMsgMultiple=Jeśli przejdziesz teraz do trybu offline, pobieranie wszystkich %S plików zostanie anulowane. Czy na pewno chcesz przejść do trybu offline?
 offlineCancelDownloadsAlertMsg=Jeśli przejdziesz teraz do trybu offline, pobieranie bieżącego pliku zostanie anulowane. Czy na pewno chcesz przejść do trybu offline?
 # FIXME: bap 2011, private browsing in enterPrivateBrowsingCancelDownloadsAlertMsg, enterPrivateBrowsingCancelDownloadsAlertMsgMultiple, leavePrivateBrowsingCancelDownloadsAlertMsg, leavePrivateBrowsingCancelDownloadsAlertMsgMultiple
