--- a/sk/browser/chrome/browser/browser.properties
+++ b/sk/browser/chrome/browser/browser.properties
@@ -6,6 +6,7 @@ openFile=Otvoriť súbor
 droponbookmarksbutton=Upustením odkazu ho uložíte do záložiek
 dropondownloadsbutton=Upustením odkazu alebo súboru ho prevezmete
 droponnewwindowbutton=Presuňte súbor alebo odkaz, ak ho chcete otvoriť v novom okne
+droponnewtabbutton=Presuňte súbor alebo odkaz, ak ho chcete otvoriť na novej karte
 droponhomebutton=Zadajte odkaz alebo súbor, ktorý bude vašou domovskou stránkou
 droponhometitle=Nastavenie domovskej stránky
 droponhomemsg=Chcete, aby sa tento dokument stal vašou novou domovskou stránkou?
