--- a/sk/browser/chrome/browser/places/places.properties
+++ b/sk/browser/chrome/browser/places/places.properties
@@ -76,7 +76,7 @@ view.sortBy.lastModified.accesskey=v
 view.sortBy.tags.label=Usporiadať podľa značiek
 view.sortBy.tags.accesskey=U
 
-searchBookmarks=Hľadať záložky
+searchBookmarks=Hľadať v záložkách
 searchHistory=Hľadať v histórii
 searchCurrentDefault=Hľadať v priečinku '%S'
 findInPrefix=Hľadať v priečinku '%S'…
