--- a/sk/security/manager/chrome/pippki/pippki.properties
+++ b/sk/security/manager/chrome/pippki/pippki.properties
@@ -172,7 +172,7 @@ resetPasswordConfirmationMessage=Vaše hlavné heslo bolo vymazané.
 crlAutoupdateEnabled=Povolená
 crlAutoupdateNotEnabled=Nepovolená
 crlAutoupdateOk=OK
-crlAutoupdateFailed=Zlyhané
+crlAutoupdateFailed=Zlyhanie
 crlImportNewCRLTitle=Import zoznamu zrušených certifikátov
 crlImportNewCRLLabel=Importovať CRL z:
 
