--- a/sk/toolkit/chrome/global/commonDialogs.properties
+++ b/sk/toolkit/chrome/global/commonDialogs.properties
@@ -1,6 +1,6 @@
 Alert=Výstraha
-Confirm=Potvrdiť
-ConfirmCheck=Potvrdiť
+Confirm=Potvrdenie
+ConfirmCheck=Potvrdenie
 Prompt=Výzva
 PromptUsernameAndPassword2=Požadované overenie
 PromptPassword2=Požadované heslo
@@ -14,4 +14,3 @@ Revert=&Vrátiť
 DontSave=&Neuložiť
 ScriptDlgGenericHeading=[Aplikácia JavaScriptu]
 ScriptDlgHeading=Oznámenie stránky %S:
-
