--- a/sk/toolkit/chrome/global/languageNames.properties
+++ b/sk/toolkit/chrome/global/languageNames.properties
@@ -1,12 +1,12 @@
 aa=Afarský
 ab=Abcházsky
 ae=Avestanský
-af=Africký
+af=Afrikánsky
 ak=Akanský
-am=Amharský
+am=Amhársky
 an=Aragónsky
 ar=Arabský
-as=Asámejský
+as=Asamský
 ast=Astúrsky
 av=Avarský
 ay=Ajmarský
@@ -33,7 +33,7 @@ cy=Waleský
 da=Dánsky
 de=Nemecký
 dv=Maldivský
-dz=Bhutánsky
+dz=Dzongkä
 ee=Ewe
 el=Grécky
 en=Anglický
@@ -41,19 +41,19 @@ eo=Esperanto
 es=Španielsky
 et=Estónsky
 eu=Baskický
-fa=Perzský (Farsi)
+fa=Perzský
 ff=Fulbský
 fi=Fínsky
 fj=Fidžský
 fo=Faerský
 fr=Francúzsky
-fur = Friulský
+fur=Friulský
 fy=Frízsky
 ga=Írsky
 gd=Škótsky
-gl=Galský
+gl=Galícijský
 gn=Guaranský
-gu=Gujaratský
+gu=Gudžarátsky
 gv=Manský
 ha=Hausský
 he=Hebrejský
@@ -99,22 +99,22 @@ lg=Gandský
 li=Limburganský
 ln=Lingalský
 lo=Laoský
-lt=Lotyšský
+lt=Litovský
 lu=Luba-Katanga
-lv=Litovský
+lv=Lotyšský
 mg=Malagézsky
 mh=Maršalský
 mi=Maurský
 mk=Macedónsky
-ml=Malajamský
+ml=Malajalámsky
 mn=Mongolský
 mo=Moldavský
-mr=Marathi
+mr=Maráthsky
 ms=Malajský
 mt=Maltský
 my=Barmský
 na=Naurský
-nb=Nórsky/Bokmaal
+nb=Nórsky/Bokmål
 nd=Ndebelský, severný
 ne=Nepálsky
 ng=Ndonga
@@ -122,13 +122,13 @@ nl=Holandský
 nn=Nórsky/Nynorsk
 no=Nórsky
 nr=Ndebelský, južný
-nso=Sotho, severný
+nso=Sothský, severný
 nv=Navachský
 ny=Chichewa
 oc=Okcitánsky
 oj=Ojibwa
 om=Oromo
-or=Orijský
+or=Urijský
 os=Osetský
 pa=Pandžábsky
 pi=Pali
@@ -146,7 +146,7 @@ sc=Sardínsky
 sd=Sindhský
 se=Severná saamčina
 sg=Sangro
-si=Singhálsky
+si=Sinhalský
 sk=Slovenský
 sl=Slovinský
 sm=Samojský
@@ -160,7 +160,7 @@ su=Sudánsky
 sv=Švédsky
 sw=Svahilský
 ta=Tamilský
-te=Telugu
+te=Telúgsky
 tg=Tadžický
 th=Thajský
 ti=Tigrijský
@@ -177,7 +177,7 @@ tw=Twi
 ty=Tahitský
 ug=Ujgurský
 uk=Ukrajinský
-ur=Urdu
+ur=Urdský
 uz=Uzbecký
 ve=Vendský
 vi=Vietnamský
