--- a/sk/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sk/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -53,7 +53,7 @@ notifyBarNeverForSiteButtonAccessKey = e
 rememberButtonText = &Zapamätať
 notifyBarRememberButtonText = Zapamätať
 notifyBarRememberButtonAccessKey = m
-passwordChangeTitle=Potvrdiť zmenu hesla
+passwordChangeTitle=Potvrdenie zmeny hesla
 passwordChangeText=Chcete zmeniť uložené heslo pre %S?
 passwordChangeTextNoUser = Chcete zmeniť uložené heslo pre toto prihlasovacie meno?
 notifyBarChangeButtonText = Zmeniť
