--- a/id/mail/chrome/mozldap/ldap.properties
+++ b/id/mail/chrome/mozldap/ldap.properties
@@ -40,15 +40,15 @@ authPromptTitle = Kata Sandi Server LDAP Dibutuhkan
 authPromptText = Masukkan kata sandi Anda untuk %1$S.
 1 = Kesalahan dalam operasi
 2 = Kesalahan protokol
-3 = Batas waktu terlewati
-4 = Batas ukuran terlewati
+3 = Batas waktu terlampaui
+4 = Batas ukuran terlampaui
 5 = Perbandingan tidak sama
 6 = Perbandingan sama
 7 = Metode otentikasi tidak didukung
 8 = Otentikasi kuat dibutuhkan
 9 = Sebagian hasil dan perujuk diterima
 10 = Perujuk diterima
-11 = Batas administratif terlewati
+11 = Batas administratif terlampaui
 12 = Ekstensi penting tidak tersedia
 13 = Kerahasiaan dibutuhkan
 14 = Proses bind SASL sedang berjalan
