--- a/id/mail/chrome/messenger/messenger.properties
+++ b/id/mail/chrome/messenger/messenger.properties
@@ -137,7 +137,7 @@ draftsFolderName = Konsep
 templatesFolderName = Templat
 outboxFolderName = Kotak Keluar
 junkFolderName = Junk
-archivesFolderName=Arkiv
+archivesFolderName = Gudang
 specialFolderDeletionErr = Penghapusan folder khusus %S tidak diizinkan untuk akun IMAP.
 specialFolderDeletionErrTitle = Penghapusan Folder Khusus
 priorityLowest = Terendah
