--- a/id/mail/chrome/messenger/msgmdn.properties
+++ b/id/mail/chrome/messenger/msgmdn.properties
@@ -35,15 +35,15 @@
 #the terms of any one of the MPL, the GPL or the LGPL.
 #
 #***** END LICENSE BLOCK *****
-MsgMdnDisplayed = Catatan: Tanda Konfirmasi Diterima (Return Receipt= berikut hanya berarti pesan telah ditampilkan pada komputer penerima. Tidak ada jaminan bahwa penerima telah membaca ata mengerti isi pesan.
+MsgMdnDisplayed = Catatan: Tanda Konfirmasi Diterima (Return Receipt) berikut hanya berarti pesan telah ditampilkan pada komputer penerima. Tidak ada jaminan bahwa penerima telah membaca atau mengerti isi pesan.
 MsgMdnDispatched = Pesan mungkin telah dicetak, dikirim melalui fax, atau diteruskan tanpa pernah ditampilkan pada penerima. Tidak ada jaminan penerima akan membaca pesan nantinya.
 MsgMdnProcessed = Pesan telah diproses pada pembaca email penerima tanpa pernah ditampilkan pada penerima. Tidak ada jaminan penerima akan membaca pesan nantinya.
 MsgMdnDeleted = Pesan telah dihapus. Penerima pesan mungkin belum atau sudah membacanya. Mungkin mereka mengembalikan pesan yang dihapus dan membacanya nanti.
 MsgMdnDenied = Penerima pesan ini tidak ingin mengirimkan kembali tanda konfirmasi diterima kepada Anda.
 MsgMdnFailed = Kegagalan terjadi. Permintaan tanda konfirmasi diterima yang benar tidak dapat dibuat atau dikirimkan kepada Anda.
 MsgMdnWishToSend = Pengirim pesan meminta diberitahukan ketika Anda membaca pesan. Apakah Anda ingin memberitahu pengirim?
-MsgMdnIgnoreRequest=Abaikan Permintaan
-MsgMdnSendReceipt=Kirimkan Tanda Konformasi
+MsgMdnIgnoreRequest = Abaikan Permintaan
+MsgMdnSendReceipt = Kirimkan Tanda Konfirmasi
 MsgMdnMsgSentTo = Berikut ini adalah Tanda Konfirmasi Diterima untuk email yang Anda kirimkan kepada %S.
 MdnDisplayedReceipt = Tanda Konfirmasi Diterima (ditampilkan)
 MdnDispatchedReceipt = Tanda Konfirmasi Diterima (dikirim)
