L10n for bug 474655 - Warn when nsIDOMCSSStyleDeclaration::GetPropertyCSSValue is called.

--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -38,6 +38,8 @@
 MimeNotCss=Stilmallen %1$S laddades inte därför att dess MIME-typ, ”%2$S”, inte är ”text/css”.
 MimeNotCssWarn=Stilmallen %1$S laddades som CSS även fast dess MIME-typ, ”%2$S”, inte är ”text/css”.
 
+UseOfGetPropertyCSSValueWarning=Bruket av getPropertyCSSValue() är förlegat. För att uppgradera din kod, använd i stället getPropertyValue().
+
 PEUnexpEOF2=Oväntat slut på filen vid sökning efter %1$S.
 PEParseRuleWSOnly=Sträng med endast blanka tecken angavs som en regel för tolkning.
 PEDeclDropped=Ignorerad deklaration.
