keeping suite up-to-date. Accesskeys will be solved in a follow-up patch, soon

--- a/pl/suite/chrome/mailnews/news.properties
+++ b/pl/suite/chrome/mailnews/news.properties
@@ -47,6 +47,8 @@ cancelDisallowed=Ta wiadomość najprawdopodobniej nie pochodzi od Ciebie. Może
 cancelConfirm=Czy na pewno wycofać tę wiadomość?
 messageCancelled=Wiadomość została wycofana.
 enterUsername=Wprowadź nazwę użytkownika dla serwera grup dyskusyjnych:
+enterUsernameTitle=Wymagana nazwa użytkownika serwera grup dyskusyjnych
+saveUsername=Użyj Menedżera haseł, aby zapamiętać tę wartość.
 enterPassword=Wprowadź hasło dostępu do serwera grup dyskusyjnych:
 enterPasswordTitle=Wymagane hasło serwera grup dyskusyjnych
 okButtonText=Pobierz
