--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -90,7 +90,8 @@ compactingFolder=Porządkowanie folderu %S…
 doneCompacting=Porządkowanie zakończone
 autoCompactAllFoldersTitle=Porządkowanie folderów
 autoCompactAllFolders=Czy uporządkować wszystkie lokalne i dostępne w trybie offline foldery?
-autoCompactAllFoldersCheckbox=Nie pytaj o to ponownie.
+autoCompactAlwaysAskCheckbox=Zawsze pytaj przed automatycznym porządkowaniem folderów
+compactNowButton=&Uporządkuj
 
 confirmFolderDeletionForFilter=Usunięcie folderu "%S" spowoduje zablokowanie wszystkich filtrów powiązanych z folderem. Czy na pewno usunąć wybrany folder?
 alertFilterChanged=Filtry powiązane z tym folderem zostaną zaktualizowane.
@@ -170,6 +171,7 @@ draftsFolderName=Szkice
 templatesFolderName=Szablony
 outboxFolderName=Wychodzące
 junkFolderName=Niechciane
+archivesFolderName=Archiwum
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
